changelog

-- next

+ webp image transcoding.

-- 0.7.3

+ Better fedicompat so bonks are visible to pleroma followers.

-- 0.7.2

+ Add the funzone. Minor other UI tweaks.

-- 0.7.1

+ Fix bug preventing unfollow from working.

-- 0.7.0

+++ Auto fetching and inlining of hoots.

++ A new xzone to view and import data not otherwise visible.

++ Preview before honking.

++ Some extra commands for better database retention management.

++ A changelog.

+ Default robots.txt.

+ Misc UI touchups.

+ Read only support for qonks.

+ About page.

+ More reliable (retries) meta messages such as follow requests.

+ Better thread support for missing context.

+ Upgrade image library for cleaner screenshots.

+ Not all summaries need labels.

+ Add max-width for video tag.

-- 0.6.0 and prior

All records from this time of primitive development have been lost.