@@ -2,6 +2,8 @@ changelog
 
 -- next
 
++ Support for some user selectable styling. Currently, skinny column mode.
+
 + webp image transcoding.
 
 -- 0.7.3
